# robinson_code

./: .flake8  DESCRIPTION  Dockerfile  Makefile  README.md  analyses.json  docker-compose.yml  pyproject.toml
.github/workflows/: actions.yml
R/: calculate_predictions.R  camera_traps_2_ramsey_format.R  change_from_raw_2_tidy.R  change_from_raw_2_tidy_structures.R  change_from_tidy_2_data_structures.R  change_session_2_month.R  cli_for_plot.R  cli_get_ramsey_format.R  cli_get_ramsey_formay.R  count_session_per_grid.R  counting_grid_with_active_cameras.R  do_nothing.R  filter_structure_by_month.R  filter_tidy.R  join_prediction_with_count_of_cells_with_data.R  misc.R  option_parser.R  plot_camera_traps_positions.R  plot_pred_grid_months.R  prepare_multisession_data_structures.R  summary_for_report.R  transform_hunting_2_tidy.R  transform_observations_2_tidy.R  trapping_hunting.R
jinja_render/: __init__.py  jinja_render.py
reports/: cat_population_estimation.tex  ref.bib
reports/templates/: cat_population_estimation.tex  coati_population_estimation.tex
src/: Robinson_crusoe.R  Robinson_crusoe_mult_sess.R  Robinson_crusoe_multisession.R  get_final_data_structure.R  join_predictions_with_count_of_cells_with_data.R  plot_pred_grid_months.R  render.py  robinson_format_2_ramsey_format.R  summary_for_cats.R  summary_for_coatis.R
tests/: robinson_format_2_ramsey_format_spec.sh  testthat.R
tests/data/: Hunting.csv  Robinson_Coati_1kmGrid_SubsetCameraGridPointsNames.dbf  Robinson_Coati_1kmGrid_SubsetCameraGridPointsNames.sbn  Robinson_Coati_1kmGrid_SubsetCameraGrids.dbf  (+88 more)
(+33 files in other folders)
